@@ -30,12 +30,12 @@ import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
 import java.time.Clock;
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import java.util.stream.IntStream;
 
 import static java.util.stream.IntStream.range;
@@ -386,7 +386,7 @@ public abstract class AssetIndexTestBase {
         }
 
         @Test
-        void withSorting() {
+        void shouldSortByProperty() {
             var assets = IntStream.range(9, 12)
                     .mapToObj(i -> createAsset("test-asset", "id" + i))
                     .peek(a -> getAssetIndex().create(a))
@@ -402,17 +402,33 @@ public abstract class AssetIndexTestBase {
         }
 
         @Test
-        void withPrivateSorting() {
+        void shouldSortByPrivateProperty() {
             var assets = IntStream.range(0, 10)
                     .mapToObj(i -> createAssetBuilder(String.valueOf(i)).privateProperty("pKey", "pValue").build())
                     .peek(a -> getAssetIndex().create(a))
-                    .collect(Collectors.toList());
+                    .toList();
 
             var spec = QuerySpec.Builder.newInstance().sortField("pKey").sortOrder(SortOrder.ASC).build();
 
             var result = getAssetIndex().queryAssets(spec);
 
             assertThat(result).usingRecursiveFieldByFieldElementComparator().containsAll(assets);
+        }
+
+        @Test
+        void shouldSortByCreatedAt() {
+            var assets = IntStream.range(0, 10)
+                    .mapToObj(i -> createAssetBuilder(String.valueOf(i)).privateProperty("pKey", "pValue").build())
+                    .peek(a -> getAssetIndex().create(a))
+                    .toList();
+
+            var spec = QuerySpec.Builder.newInstance().sortField("createdAt").sortOrder(SortOrder.DESC).build();
+
+            var result = getAssetIndex().queryAssets(spec);
+
+            var reversedAssets = new ArrayList<>(assets);
+            Collections.reverse(reversedAssets);
+            assertThat(result).usingRecursiveFieldByFieldElementComparator().containsAll(reversedAssets);
         }
 
         @Test
@@ -536,15 +552,21 @@ public abstract class AssetIndexTestBase {
 
             assertThat(assetIndex.countAssets(List.of())).isEqualTo(1);
 
-            asset.getProperties().put("newKey", "newValue");
-            var updated = assetIndex.updateAsset(asset);
+            var newAsset = getAsset(id);
+            newAsset.getProperties().put("newKey", "newValue");
+
+            var updated = assetIndex.updateAsset(newAsset);
 
             Assertions.assertThat(updated).isNotNull();
 
             var assetFound = getAssetIndex().findById("id1");
 
             assertThat(assetFound).isNotNull();
-            assertThat(assetFound).usingRecursiveComparison().isEqualTo(asset);
+            assertThat(assetFound)
+                    .usingRecursiveComparison()
+                    .ignoringFields("createdAt")
+                    .isEqualTo(newAsset);
+            assertThat(assetFound.getProperties()).containsEntry("newKey", "newValue");
         }
 
         @Test
@@ -558,15 +580,20 @@ public abstract class AssetIndexTestBase {
 
             assertThat(assetIndex.countAssets(List.of())).isEqualTo(1);
 
-            asset.getProperties().remove("newKey");
-            var updated = assetIndex.updateAsset(asset);
+            var newAsset = getAsset(id);
+            newAsset.getProperties().remove("newKey");
+
+            var updated = assetIndex.updateAsset(newAsset);
 
             Assertions.assertThat(updated).isNotNull();
 
             var assetFound = getAssetIndex().findById("id1");
 
             assertThat(assetFound).isNotNull();
-            assertThat(assetFound).usingRecursiveComparison().isEqualTo(asset);
+            assertThat(assetFound)
+                    .usingRecursiveComparison()
+                    .ignoringFields("createdAt")
+                    .isEqualTo(newAsset);
             assertThat(assetFound.getProperties().keySet()).doesNotContain("newKey");
         }
 
@@ -581,15 +608,19 @@ public abstract class AssetIndexTestBase {
 
             assertThat(assetIndex.countAssets(List.of())).isEqualTo(1);
 
-            asset.getProperties().put("newKey", "newValue");
-            var updated = assetIndex.updateAsset(asset);
+            var newAsset = getAsset(id);
+            newAsset.getProperties().put("newKey", "newValue");
+            var updated = assetIndex.updateAsset(newAsset);
 
             Assertions.assertThat(updated).isNotNull();
 
             var assetFound = getAssetIndex().findById("id1");
 
             assertThat(assetFound).isNotNull();
-            assertThat(assetFound).usingRecursiveComparison().isEqualTo(asset);
+            assertThat(assetFound)
+                    .usingRecursiveComparison()
+                    .ignoringFields("createdAt")
+                    .isEqualTo(newAsset);
             assertThat(assetFound.getProperties()).containsEntry("newKey", "newValue");
         }
 
@@ -602,15 +633,24 @@ public abstract class AssetIndexTestBase {
 
             assertThat(assetIndex.countAssets(List.of())).isEqualTo(1);
 
-            asset.getDataAddress().getProperties().put("newKey", "newValue");
-            var updated = assetIndex.updateAsset(asset);
+            var newAsset = getAsset(id);
+            newAsset.getDataAddress().getProperties().put("newKey", "newValue");
+            var updated = assetIndex.updateAsset(newAsset);
 
             Assertions.assertThat(updated).isNotNull();
 
-            var assetFound = getAssetIndex().findById("id1");
+            var assetFound = assetIndex.findById("id1");
+            var dataAddressFound = assetIndex.resolveForAsset("id1");
 
             assertThat(assetFound).isNotNull();
-            assertThat(assetFound).usingRecursiveComparison().isEqualTo(asset);
+            assertThat(dataAddressFound).isNotNull();
+            assertThat(assetFound)
+                    .usingRecursiveComparison()
+                    .ignoringFields("createdAt")
+                    .isEqualTo(newAsset);
+            assertThat(assetFound.getDataAddress())
+                    .usingRecursiveComparison()
+                    .isEqualTo(dataAddressFound);
         }
     }
 
